--- a/jobs/chinchilla_8_nodes_big_BS.yaml
+++ b/jobs/chinchilla_8_nodes_big_BS.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: CC_8_nodes_big_BS
+  name: CC_8_nodes_rw_BS_256_rerun
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
@@ -7,95 +7,76 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [149045248]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [178916584]
             epochs: [80, 40, 20, 10, 5]
             warmup_tokens: [149045248] 
-          - train_num_samples: [74522624]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [89458292]
             epochs: [5]
             warmup_tokens: [74522624] 
-          - train_num_samples: [37261312]
-            max_checkpoints_flops: [1]
+          - train_num_samples: [44729146]
             epochs: [5]
             warmup_tokens: [37261312]
-        
 
       - model: ['layers=21_hidden-dim=832']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [220872704]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [241466385]
             epochs: [80, 40, 20, 10, 5]
             warmup_tokens: [220872704] 
-          - train_num_samples: [110436352]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [120733193]
             epochs: [5]
             warmup_tokens: [110436352] 
-          - train_num_samples: [55218176]
-            max_checkpoints_flops: [1]
+          - train_num_samples: [60366597]
             epochs: [5]
             warmup_tokens: [55218176]
 
       - model: ['layers=23_hidden-dim=1024']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [347078656]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [307327071]
             epochs: [40, 20, 10, 5]
             warmup_tokens: [347078656]
-          - train_num_samples: [173539328]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [153663536]
             epochs: [50]
             warmup_tokens: [173539328] 
-          - train_num_samples: [86769664]
-            max_checkpoints_flops: [1]
+          - train_num_samples: [76831768]
             epochs: [25]
             warmup_tokens: [86769664] 
 
       - model: ['layers=26_hidden-dim=1120']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [455311360]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [468543841]
             epochs: [20, 10, 5]
             warmup_tokens: [455311360] 
-          - train_num_samples: [227655680]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [234271921]
             epochs: [5]
             warmup_tokens: [227655680] 
-          - train_num_samples: [113827840]
-            max_checkpoints_flops: [1]
+          - train_num_samples: [117135961]
             epochs: [5]
             warmup_tokens: [113827840] 
 
       - model: ['layers=26_hidden-dim=1312']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [611958784]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [697214711]
             epochs: [10, 5]
             warmup_tokens: [611958784] 
-          - train_num_samples: [305979392]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [348607356]
             epochs: [5]
             warmup_tokens: [305979392] 
-          - train_num_samples: [152989696]
-            max_checkpoints_flops: [1]
+          - train_num_samples: [174303678]
             epochs: [5]
             warmup_tokens: [152989696] 
 
       - model: ['layers=30_hidden-dim=1504']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [901726208]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [946333073]
             epochs: [5]
             warmup_tokens: [901726208]
-          - train_num_samples: [450863104]
-            max_checkpoints_flops: [0]
+          - train_num_samples: [473166537] #946333073/2=473166536.5
             epochs: [5]
             warmup_tokens: [450863104]
-          - train_num_samples: [225431552]
-            max_checkpoints_flops: [1]
+          - train_num_samples: [236583269]
             epochs: [5]
             warmup_tokens: [225431552] 
-
+    max_checkpoints_flops: [1]
     lr: [3.0e-3]
     batch_size: [8]
     lr_cooldown_end: [3.0e-5]
