--- a/jobs/seed_var_exp.yaml
+++ b/jobs/seed_var_exp.yaml
@@ -1,28 +1,35 @@
 job_details:
-  name: seed_variance
+  name: seed_variance_small_models
   output_dir: exps
   num_nodes: 4
-  num_gpus: 4
+  num_gpus: 1
 parameters:
-    model: ['layers=15_hidden-dim=640']
-    warmup_tokens: [108462080]
-    batch_size: [10]
     accum_freq: [1]
     beta2: [0.99]
-    lr: [4.7e-3]
-    lr_cooldown_end: [4.7e-5]
     decoupled_wd: [1.0e-4]
+    lr_scheduler: ['cosine', 'const']
+    epochs: [10]
     LIST_SCHED_BUDGET:
-      - train_num_samples: [216924160]
-        max_tokens: [500000000000] 
-        lr_scheduler: ['const']
-        averagers: ['poly_08_1']
-        epochs: [10]
-      - train_num_samples: [1310720000]
-        max_tokens: [2169241600]
-        lr_scheduler: ['cosine']
-        averagers: ['none']
-        epochs: [1000]
+      - train_num_samples: [10067822]
+        model: ['layers=3_hidden-dim=96']
+        batch_size: [5]
+        lr: [1.3e-02]
+        lr_cooldown_end: [1.3e-04]
+        warmup_tokens: [5173248]
+      - train_num_samples: [13881723]
+        model: ['layers=4_hidden-dim=128']
+        batch_size: [7]
+        lr: [1.15e-02]
+        lr_cooldown_end: [1.15e-04]
+        warmup_tokens: [7503872]
+      - train_num_samples: [21237007]
+        model: ['layers=5_hidden-dim=160']
+        batch_size: [8]
+        lr: [1.05e-02]
+        lr_cooldown_end: [1.05e-04]
+        warmup_tokens: [9809920]
+
+
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
