yamls for last minute reruns

--- a/jobs/chinchilla_8_nodes_big_BS.yaml
+++ b/jobs/chinchilla_8_nodes_big_BS.yaml
@@ -1,81 +1,82 @@
 job_details:
-  name: CC_8_nodes_rw_BS_256_rerun
+  name: CC_8_nodes_owt2_BS_256_rerun_1_epoch
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
 parameters:
     LIST_MODEL_TOKENS:
-      - model: ['layers=18_hidden-dim=704']
-        LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [178916584]
-            epochs: [80, 40, 20, 10, 5]
-            warmup_tokens: [149045248] 
-          - train_num_samples: [89458292]
-            epochs: [5]
-            warmup_tokens: [74522624] 
-          - train_num_samples: [44729146]
-            epochs: [5]
-            warmup_tokens: [37261312]
+      # - model: ['layers=18_hidden-dim=704']
+      #   LIST_BUDGET_MAX_SAVE:
+      #     - train_num_samples: [14313326720]
+      #       # epochs: [80, 40, 20, 10, 5]
+      #       epochs: [1]
+          #   warmup_tokens: [149045248] 
+          # - train_num_samples: [89458292]
+          #   epochs: [5]
+          #   warmup_tokens: [74522624] 
+          # - train_num_samples: [44729146]
+          #   epochs: [5]
+          #   warmup_tokens: [37261312]
 
       - model: ['layers=21_hidden-dim=832']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [241466385]
-            epochs: [80, 40, 20, 10, 5]
-            warmup_tokens: [220872704] 
-          - train_num_samples: [120733193]
-            epochs: [5]
-            warmup_tokens: [110436352] 
-          - train_num_samples: [60366597]
-            epochs: [5]
+          # - train_num_samples: [241466385]
+          #   epochs: [80, 40, 20, 10, 5]
+          #   warmup_tokens: [220872704] 
+          # - train_num_samples: [120733193]
+          #   epochs: [5]
+          #   warmup_tokens: [110436352] 
+          - train_num_samples: [19317310800, 9658655400]
+            epochs: [1]
             warmup_tokens: [55218176]
 
       - model: ['layers=23_hidden-dim=1024']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [307327071]
-            epochs: [40, 20, 10, 5]
-            warmup_tokens: [347078656]
-          - train_num_samples: [153663536]
-            epochs: [50]
-            warmup_tokens: [173539328] 
-          - train_num_samples: [76831768]
-            epochs: [25]
+          # - train_num_samples: [307327071]
+          #   epochs: [40, 20, 10, 5]
+          #   warmup_tokens: [347078656]
+          # - train_num_samples: [153663536]
+          #   epochs: [50]
+          #   warmup_tokens: [173539328] 
+          - train_num_samples: [12293082840, ]
+            epochs: [1]
             warmup_tokens: [86769664] 
 
       - model: ['layers=26_hidden-dim=1120']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [468543841]
-            epochs: [20, 10, 5]
-            warmup_tokens: [455311360] 
-          - train_num_samples: [234271921]
-            epochs: [5]
-            warmup_tokens: [227655680] 
-          - train_num_samples: [117135961]
-            epochs: [5]
+          # - train_num_samples: [468543841]
+          #   epochs: [20, 10, 5]
+          #   warmup_tokens: [455311360] 
+          # - train_num_samples: [234271921]
+          #   epochs: [5]
+          #   warmup_tokens: [227655680] 
+          - train_num_samples: [9370876820]
+            epochs: [1]
             warmup_tokens: [113827840] 
 
-      - model: ['layers=26_hidden-dim=1312']
-        LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [697214711]
-            epochs: [10, 5]
-            warmup_tokens: [611958784] 
-          - train_num_samples: [348607356]
-            epochs: [5]
-            warmup_tokens: [305979392] 
-          - train_num_samples: [174303678]
-            epochs: [5]
-            warmup_tokens: [152989696] 
+      # - model: ['layers=26_hidden-dim=1312']
+      #   LIST_BUDGET_MAX_SAVE:
+      #     - train_num_samples: [697214711]
+      #       epochs: [10, 5]
+      #       warmup_tokens: [611958784] 
+      #     - train_num_samples: [348607356]
+      #       epochs: [5]
+      #       warmup_tokens: [305979392] 
+      #     - train_num_samples: [174303678]
+      #       epochs: [5]
+      #       warmup_tokens: [152989696] 
 
-      - model: ['layers=30_hidden-dim=1504']
-        LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [946333073]
-            epochs: [5]
-            warmup_tokens: [901726208]
-          - train_num_samples: [473166537] #946333073/2=473166536.5
-            epochs: [5]
-            warmup_tokens: [450863104]
-          - train_num_samples: [236583269]
-            epochs: [5]
-            warmup_tokens: [225431552] 
+      # - model: ['layers=30_hidden-dim=1504']
+      #   LIST_BUDGET_MAX_SAVE:
+      #     - train_num_samples: [946333073]
+      #       epochs: [5]
+      #       warmup_tokens: [901726208]
+      #     - train_num_samples: [473166537] #946333073/2=473166536.5
+      #       epochs: [5]
+      #       warmup_tokens: [450863104]
+      #     - train_num_samples: [236583269]
+      #       epochs: [5]
+      #       warmup_tokens: [225431552] 
     max_checkpoints_flops: [1]
     lr: [3.0e-3]
     batch_size: [8]
@@ -103,6 +104,6 @@ parameters:
     delete_previous_checkpoint: [true]
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
-    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
-    multiple_data_passes: [true]
+    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
+    # multiple_data_passes: [true]
