CC 1 epoch yaml

--- a/jobs/chinchilla_8_nodes_big_BS.yaml
+++ b/jobs/chinchilla_8_nodes_big_BS.yaml
@@ -5,78 +5,61 @@ job_details:
   num_nodes: 8
 parameters:
     LIST_MODEL_TOKENS:
-      # - model: ['layers=18_hidden-dim=704']
-      #   LIST_BUDGET_MAX_SAVE:
-      #     - train_num_samples: [14313326720]
-      #       # epochs: [80, 40, 20, 10, 5]
-      #       epochs: [1]
-          #   warmup_tokens: [149045248] 
-          # - train_num_samples: [89458292]
-          #   epochs: [5]
-          #   warmup_tokens: [74522624] 
-          # - train_num_samples: [44729146]
-          #   epochs: [5]
-          #   warmup_tokens: [37261312]
+      - model: ['layers=18_hidden-dim=704']
+        LIST_WARMUP:
+          - train_num_samples: [14313326720, 7156663360, 3578331680, 1789165840, 894582920]
+            warmup_tokens: [149045248]
+          - train_num_samples: [447291460]
+            warmup_tokens: [74522624] 
+          - train_num_samples: [223645730]
+            warmup_tokens: [37261312] 
 
       - model: ['layers=21_hidden-dim=832']
-        LIST_BUDGET_MAX_SAVE:
-          # - train_num_samples: [241466385]
-          #   epochs: [80, 40, 20, 10, 5]
-          #   warmup_tokens: [220872704] 
-          # - train_num_samples: [120733193]
-          #   epochs: [5]
-          #   warmup_tokens: [110436352] 
-          - train_num_samples: [19317310800, 9658655400]
-            epochs: [1]
+        LIST_WARMUP:
+          - train_num_samples: [19317310800,9658655400,4829327700,2414663850,1207331925]
             warmup_tokens: [55218176]
+          - train_num_samples: [603665962]
+            warmup_tokens: [27609088]
+          - train_num_samples: [301832981]
+            warmup_tokens: [13804544]
 
       - model: ['layers=23_hidden-dim=1024']
-        LIST_BUDGET_MAX_SAVE:
-          # - train_num_samples: [307327071]
-          #   epochs: [40, 20, 10, 5]
-          #   warmup_tokens: [347078656]
-          # - train_num_samples: [153663536]
-          #   epochs: [50]
-          #   warmup_tokens: [173539328] 
-          - train_num_samples: [12293082840, ]
-            epochs: [1]
-            warmup_tokens: [86769664] 
+        LIST_WARMUP:
+          - train_num_samples: [12293082840, 6146541420, 3073270710, 1536635355]
+            warmup_tokens: [86769664]
+          - train_num_samples: [768317677]
+            warmup_tokens: [43384832] 
+          - train_num_samples: [384158838]
+            warmup_tokens: [21692416] 
 
       - model: ['layers=26_hidden-dim=1120']
-        LIST_BUDGET_MAX_SAVE:
-          # - train_num_samples: [468543841]
-          #   epochs: [20, 10, 5]
-          #   warmup_tokens: [455311360] 
-          # - train_num_samples: [234271921]
-          #   epochs: [5]
-          #   warmup_tokens: [227655680] 
-          - train_num_samples: [9370876820]
-            epochs: [1]
-            warmup_tokens: [113827840] 
+        LIST_WARMUP:
+          - train_num_samples: [9370876820, 4685438410, 2342719205]
+            warmup_tokens: [113827840]
+          - train_num_samples: [1171359602]
+            warmup_tokens: [56913920] 
+          - train_num_samples: [585679801]
+            warmup_tokens: [28456960] 
 
-      # - model: ['layers=26_hidden-dim=1312']
-      #   LIST_BUDGET_MAX_SAVE:
-      #     - train_num_samples: [697214711]
-      #       epochs: [10, 5]
-      #       warmup_tokens: [611958784] 
-      #     - train_num_samples: [348607356]
-      #       epochs: [5]
-      #       warmup_tokens: [305979392] 
-      #     - train_num_samples: [174303678]
-      #       epochs: [5]
-      #       warmup_tokens: [152989696] 
+      - model: ['layers=26_hidden-dim=1312']
+        LIST_WARMUP:
+          - train_num_samples: [6972147110, 3486073555]
+            warmup_tokens: [611958784] 
+          - train_num_samples: [1743036777]
+            warmup_tokens: [305979392]
+          - train_num_samples: [871518388]
+            warmup_tokens: [152989696]
 
-      # - model: ['layers=30_hidden-dim=1504']
-      #   LIST_BUDGET_MAX_SAVE:
-      #     - train_num_samples: [946333073]
-      #       epochs: [5]
-      #       warmup_tokens: [901726208]
-      #     - train_num_samples: [473166537] #946333073/2=473166536.5
-      #       epochs: [5]
-      #       warmup_tokens: [450863104]
-      #     - train_num_samples: [236583269]
-      #       epochs: [5]
-      #       warmup_tokens: [225431552] 
+      - model: ['layers=30_hidden-dim=1504']
+        LIST_WARMUP:
+          - train_num_samples: [4731665365]
+            warmup_tokens: [901726208]
+          - train_num_samples: [2365832682]
+            warmup_tokens: [450863104]
+          - train_num_samples: [1182916341]
+            warmup_tokens: [225431552]
+
+    epochs: [1]
     max_checkpoints_flops: [1]
     lr: [3.0e-3]
     batch_size: [8]
@@ -105,5 +88,5 @@ parameters:
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/filtered_manifest_train.jsonl"]
     # multiple_data_passes: [true]
