--- a/jobs/chinchilla_8_nodes_big_BS.yaml
+++ b/jobs/chinchilla_8_nodes_big_BS.yaml
@@ -7,65 +7,67 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
         LIST_WARMUP:
-          - train_num_samples: [14313326720, 7156663360, 3578331680, 1789165840, 894582920]
+          - cosine_half_period_tokens: [14313326740, 7156663370, 3578331685, 1789165842, 894582921]
             warmup_tokens: [149045248]
-          - train_num_samples: [447291460]
+          - cosine_half_period_tokens: [447291460]
             warmup_tokens: [74522624] 
-          - train_num_samples: [223645730]
+          - cosine_half_period_tokens: [223645730]
             warmup_tokens: [37261312] 
 
       - model: ['layers=21_hidden-dim=832']
         LIST_WARMUP:
-          - train_num_samples: [19317310800,9658655400,4829327700,2414663850,1207331925]
+          - cosine_half_period_tokens: [19317310800, 9658655400, 4829327700, 2414663850, 1207331925]
             warmup_tokens: [55218176]
-          - train_num_samples: [603665962]
+          - cosine_half_period_tokens: [603665962]
             warmup_tokens: [27609088]
-          - train_num_samples: [301832981]
+          - cosine_half_period_tokens: [301832981]
             warmup_tokens: [13804544]
 
       - model: ['layers=23_hidden-dim=1024']
         LIST_WARMUP:
-          - train_num_samples: [12293082840, 6146541420, 3073270710, 1536635355]
+          - cosine_half_period_tokens: [12293082840, 6146541420, 3073270710, 1536635355]
             warmup_tokens: [86769664]
-          - train_num_samples: [768317677]
+          - cosine_half_period_tokens: [768317677]
             warmup_tokens: [43384832] 
-          - train_num_samples: [384158838]
+          - cosine_half_period_tokens: [384158838]
             warmup_tokens: [21692416] 
 
       - model: ['layers=26_hidden-dim=1120']
         LIST_WARMUP:
-          - train_num_samples: [9370876820, 4685438410, 2342719205]
+          - cosine_half_period_tokens: [9370876820, 4685438410, 2342719205]
             warmup_tokens: [113827840]
-          - train_num_samples: [1171359602]
+          - cosine_half_period_tokens: [1171359602]
             warmup_tokens: [56913920] 
-          - train_num_samples: [585679801]
+          - cosine_half_period_tokens: [585679801]
             warmup_tokens: [28456960] 
 
       - model: ['layers=26_hidden-dim=1312']
         LIST_WARMUP:
-          - train_num_samples: [6972147110, 3486073555]
+          - cosine_half_period_tokens: [6972147110, 3486073555]
             warmup_tokens: [611958784] 
-          - train_num_samples: [1743036777]
+          - cosine_half_period_tokens: [1743036777]
             warmup_tokens: [305979392]
-          - train_num_samples: [871518388]
+          - cosine_half_period_tokens: [871518388]
             warmup_tokens: [152989696]
 
       - model: ['layers=30_hidden-dim=1504']
         LIST_WARMUP:
-          - train_num_samples: [4731665365]
+          - cosine_half_period_tokens: [4731665365]
             warmup_tokens: [901726208]
-          - train_num_samples: [2365832682]
+          - cosine_half_period_tokens: [2365832682]
             warmup_tokens: [450863104]
-          - train_num_samples: [1182916341]
+          - cosine_half_period_tokens: [1182916341]
             warmup_tokens: [225431552]
 
+    # max_tokens is set to be cosine_half_period_tokens when it's not None + cosine_half_period_tokens is set
+    train_num_samples: [21139292160]
     epochs: [1]
     max_checkpoints_flops: [1]
     lr: [3.0e-3]
     batch_size: [8]
     lr_cooldown_end: [3.0e-5]
     beta2: [0.95]
-    lr_scheduler: ['cosine']
+    lr_scheduler: ['cosine-target']
     # beta2: [0.99]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
