--- a/jobs/kaplan_4_nodes_orig.yaml
+++ b/jobs/kaplan_4_nodes_orig.yaml
@@ -10,7 +10,7 @@ parameters:
         warmup_tokens: [84787200, 1572864000]
 
       - model: ['layers=15_hidden-dim=640']
-        max_tokens: [21156069376]
+        max_tokens: [21139292160]
         warmup_tokens: [108462080, 1572864000]
 
     cosine_half_period_tokens: [131072000000] # as in kaplan
@@ -40,7 +40,7 @@ parameters:
     workers: [2]
     accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    max_checkpoints_flops: [40]
+    max_checkpoints_flops: [9]
     # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
     dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/filtered_manifest_train.jsonl"]
-    multiple_data_passes: [true]
+    # multiple_data_passes: [true]
