--- a/jobs/kaplan_4_nodes_big_BS.yaml
+++ b/jobs/kaplan_4_nodes_big_BS.yaml
@@ -10,10 +10,11 @@ parameters:
         warmup_tokens: [84787200, 1572864000]
 
       - model: ['layers=15_hidden-dim=640']
-        max_tokens: [21692416000]
+        max_tokens: [21139292160]
         warmup_tokens: [108462080, 1572864000]
 
-    train_num_samples: [436906667]
+    cosine_half_period_tokens: [131072000000] # as in kaplan
+    train_num_samples: [21139292160]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [16] # global batch size is 8*4*4 = 128
@@ -29,7 +30,7 @@ parameters:
     data_key: ['json.gz']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
+    lr_scheduler: ['cosine-target']
     log_avg_model_training_loss: [20]
     wd: [0.033]
     lr: [3.0e-03] 
@@ -41,5 +42,5 @@ parameters:
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
     # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
-    multiple_data_passes: [true]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/filtered_manifest_train.jsonl"]
+    # multiple_data_passes: [true]
