tuned 1 epoch job

--- a/jobs/const_8_nodes_tuned.yaml
+++ b/jobs/const_8_nodes_tuned.yaml
@@ -1,125 +1,68 @@
 job_details:
-  name: const_8_nodes_tuned_openwebtext2
+  name: const_8_nodes_tuned_owt2_1_epoch
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
-        warmup_tokens: [149045248, 1572864000] 
+        warmup_tokens: [149045248] 
         accum_freq: [1]
         batch_size: [6]
         lr: [4.3e-03]
         lr_cooldown_end: [4.3e-05]
         beta2: [0.99]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [2907394490]
-            max_tokens: [500000000000] # holder for the max tokens (in submit_multiple all entries in LIST should have the same length)
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [10]
-          # - train_num_samples: [436906667]
-          #   max_tokens: [29073944936]
-          #   lr_scheduler: ['cosine']
-          #   averagers: ['none']
-          #   epochs: [300]
+        max_tokens: [29073944900] 
 
       - model: ['layers=21_hidden-dim=832']
-        warmup_tokens: [220872704, 1572864000] 
+        warmup_tokens: [220872704] 
         accum_freq: [1]
         batch_size: [8]
         lr: [3.8e-03]
         lr_cooldown_end: [3.8e-05]
         beta2: [0.95]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [1961914370]
-            max_tokens: [500000000000]
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [10]
-          # - train_num_samples: [436906667]
-          #   max_tokens: [19619143764]
-          #   lr_scheduler: ['cosine']
-          #   averagers: ['none']
-          #   epochs: [300]
+        max_tokens: [19619143700]
 
       - model: ['layers=23_hidden-dim=1024']
-        warmup_tokens: [347078656, 1572864000] 
+        warmup_tokens: [347078656] 
         accum_freq: [2]
         batch_size: [10]
         lr: [3.2e-03]
         lr_cooldown_end: [3.2e-05]
         beta2: [0.95]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [1248516224]
-            max_tokens: [500000000000]
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [10]
-          # - train_num_samples: [436906667]
-          #   max_tokens: [12485162249]
-          #   lr_scheduler: ['cosine']
-          #   averagers: ['none']
-          #   epochs: [300]
+        max_tokens: [12485162240]
 
       - model: ['layers=26_hidden-dim=1120']
-        warmup_tokens: [455311360, 1572864000] 
+        warmup_tokens: [455311360] 
         accum_freq: [2]
         batch_size: [14]
         lr: [3.0e-03]
         lr_cooldown_end: [3.0e-05]
         beta2: [0.95]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [951729676]
-            max_tokens: [500000000000] 
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [10]
-          # - train_num_samples: [436906667]
-          #   max_tokens: [9517296764]
-          #   lr_scheduler: ['cosine']
-          #   averagers: ['none']
-          #   epochs: [300]
+        max_tokens: [9517296760] 
+        
 
       - model: ['layers=26_hidden-dim=1312']
-        warmup_tokens: [611958784, 1572864000] 
+        warmup_tokens: [611958784] 
         accum_freq: [4]
         batch_size: [16]
         lr: [2.7e-03]
         lr_cooldown_end: [2.7e-05]
         beta2: [0.95]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [708108690]
-            max_tokens: [500000000000] 
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [10]
-          # - train_num_samples: [436906667]
-          #   max_tokens: [7081086908]
-          #   lr_scheduler: ['cosine']
-          #   averagers: ['none']
-          #   epochs: [300]
+        max_tokens: [708108690] 
 
       - model: ['layers=30_hidden-dim=1504']
-        warmup_tokens: [901726208, 1572864000] 
+        warmup_tokens: [901726208] 
         accum_freq: [5]
         batch_size: [20]
         lr: [2.4e-03]
         lr_cooldown_end: [2.4e-05]
         beta2: [0.95]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [480559760]
-            max_tokens: [500000000000] 
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [10]
-      #     - train_num_samples: [436906667]
-      #       max_tokens: [4805597636]
-      #       lr_scheduler: ['cosine']
-      #       averagers: ['none']
-      #       epochs: [300]
-
-    
+        max_tokens: [4805597600] 
+            
+    lr_scheduler: ['const']      
+    epochs: [1]
+    train_num_samples: [21139292160]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -141,5 +84,5 @@ parameters:
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
     # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
-    multiple_data_passes: [true]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/filtered_manifest_train.jsonl"]
+    # multiple_data_passes: [true]
