--- a/jobs/kaplan_4_nodes_orig.yaml
+++ b/jobs/kaplan_4_nodes_orig.yaml
@@ -30,7 +30,7 @@ parameters:
     data_key: ['json.gz']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
+    lr_scheduler: ['cosine-target']
     log_avg_model_training_loss: [20]
     wd: [0.033]
     lr: [2.12e-03] 
